[package]
name = "safer_owning_ref"
version = "0.5.1"
authors = ["Marvin Löbel <loebel.marvin@gmail.com>", "Noam Ta Shma noam.tashma@gmail.com"]
license = "MIT"

description = "A library for creating references that carry their owner with them."
readme = "README.md"

repository = "https://github.com/noamtashma/owning-ref-rs"
keywords = ["reference", "sibling", "field", "owning"]

[lib]
name = "owning_ref"

[dependencies]
stable_deref_trait = "1.0.0"
maybe-dangling = "0.1.1"
